--- a/notebooks/DQNpong_ConvGPU.ipynb
+++ b/notebooks/DQNpong_ConvGPU.ipynb
@@ -29,16 +29,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4 CUDA devices found, CUDA version 8.0\n"
+      "1 CUDA device found, CUDA version 8.0\n"
      ]
     }
    ],
@@ -66,10 +64,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -79,11 +75,11 @@
     {
      "data": {
       "text/plain": [
-       "  0.050579   0.39953\n",
-       "   0.73763   0.91040\n"
+       "  0.62465  0.84862\n",
+       "  0.63891  0.26990\n"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,10 +97,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -117,7 +111,7 @@
        "4"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,10 +159,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -246,11 +238,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "<console>:84: error: reassignment to val",
+      "        v.fwdAlgo = talgo",
+      "                  ^",
+      "<console>:85: error: reassignment to val",
+      "        grad(k).fwdAlgo = talgo",
+      "                        ^",
+      "<console>:86: error: reassignment to val",
+      "        gradsq(k).fwdAlgo = talgo",
+      "                          ^",
+      "<console>:96: error: value asMat is not a member of BIDMat.GFilter",
+      "        val h3 = model(\"W3\").asMat ^* h2.asMat;  // FC matrix multiply, h3 is a matrix",
+      "                             ^",
+      "<console>:96: error: value asMat is not a member of BIDMat.GMat",
+      "        val h3 = model(\"W3\").asMat ^* h2.asMat;  // FC matrix multiply, h3 is a matrix",
+      "                                         ^",
+      "<console>:98: error: value asMat is not a member of BIDMat.GFilter",
+      "        val rew = model(\"W4\").asMat ^* h3;       // Final FC layer, rew is a matrix",
+      "                              ^",
+      "<console>:106: error: type mismatch;",
+      " found   : BIDMat.FMat",
+      " required: BIDMat.GMat",
+      "            GMat(s).reshapeView(height,width,nwindow,npar).transpose(2,0,1,3);",
+      "                                                                    ^",
+      "<console>:136: error: value asMat is not a member of BIDMat.GFilter",
+      "        grad(\"W4\").asMat ~ grad(\"W4\").asMat + (h3 *^ garew);              // Backward model gradient (FC)",
+      "                   ^",
+      "<console>:136: error: value asMat is not a member of BIDMat.GFilter",
+      "        grad(\"W4\").asMat ~ grad(\"W4\").asMat + (h3 *^ garew);              // Backward model gradient (FC)",
+      "                                      ^",
+      "<console>:137: error: value asMat is not a member of BIDMat.GFilter",
+      "        val dh3 = (model(\"W4\").asMat * garew);                            // Backward data gradient (FC)",
+      "                               ^",
+      "<console>:140: error: value asMat is not a member of BIDMat.GFilter",
+      "        grad(\"W3\").asMat ~ grad(\"W3\").asMat + (h2.asMat *^ dh3);         // Backward model gradient (FC)",
+      "                   ^",
+      "<console>:140: error: value asMat is not a member of BIDMat.GFilter",
+      "        grad(\"W3\").asMat ~ grad(\"W3\").asMat + (h2.asMat *^ dh3);         // Backward model gradient (FC)",
+      "                                      ^",
+      "<console>:140: error: value asMat is not a member of BIDMat.GMat",
+      "        grad(\"W3\").asMat ~ grad(\"W3\").asMat + (h2.asMat *^ dh3);         // Backward model gradient (FC)",
+      "                                                  ^",
+      "<console>:141: error: value asMat is not a member of BIDMat.GFilter",
+      "        val dh2 = (model(\"W3\").asMat * dh3).asND(nhidden2,10,10,npar);  // Backward data gradient (FC)",
+      "                               ^"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -261,7 +302,7 @@
     "import scala.collection.mutable.HashMap;\n",
     "import BIDMat.GFilter._\n",
     "import jcuda.jcudnn.cudnnTensorFormat._\n",
-    "import jcuda.jcudnn.cudnnConvolutionFwdAlgo._\n",
+    "import jcuda.jcudnn.cudnnConvolutionMode._\n",
     "\n",
     "// Best for debugging - matches the CPU tensor order:\n",
     "//val tformat = CUDNN_TENSOR_NHWC;\n",
@@ -269,74 +310,78 @@
     "\n",
     "// Best for performance:\n",
     "val tformat = CUDNN_TENSOR_NCHW;\n",
-    "val talgo = CUDNN_CONVOLUTION_FWD_ALGO_GEMM;\n",
+    "val convt = CUDNN_CROSS_CORRELATION;\n",
+    "\n",
     "\n",
     "class Estimator(nhidden:Int, nhidden2:Int, nhidden3:Int, nactions:Int) {\n",
+    "    \n",
+    "    val opts = new Net.Options;\n",
+    "    \n",
+    "    import BIDMach.networks.layers.Node._;\n",
     "\n",
-    "//        \"\"\" Create model matrices, and gradient and squared gradient buffers\"\"\"\n",
-    "    val model = new HashMap[String, GFilter]();                 // Store model params in Filters, even for FC layers\n",
-    "    val grad = new HashMap[String, GFilter]();\n",
-    "    val gradsq = new HashMap[String, GFilter]();\n",
+    "    val in = input;\n",
+    "    val acts = input;\n",
     "    \n",
-    "    // Filter specifiers are (h, w, indepth, outdepth, stride, pad)\n",
-    "    model(\"W1\") = GFilter2Ddn(7,7,nwindow,nhidden,4,3);                         // First conv layer\n",
-    "    model(\"W2\") = GFilter2Ddn(3,3,nhidden,nhidden2,2,1);                        // Second conv layer\n",
-    "    model(\"W3\") = GFilter2Ddn(10,10,nhidden2,nhidden3,1,0);                     // This is actually an FC layer\n",
-    "    model(\"W4\") = GFilter2Ddn(1,1,nhidden3,nactions,1,0);                       // Second FC layer\n",
-    "    \n",
-    "    model(\"W1\")(?) = GMat(normrnd(0,1/math.sqrt(7*7*nwindow).toFloat,7*7*nwindow*nhidden,1))\n",
-    "    model(\"W2\")(?) = GMat(normrnd(0,1/math.sqrt(3*3*nhidden).toFloat,3*3*nhidden*nhidden2,1))\n",
-    "    model(\"W3\")(?) = GMat(normrnd(0,1/math.sqrt(10*10*nhidden2).toFloat,10*10*nhidden2*nhidden3,1))\n",
-    "    model(\"W4\")(?) = GMat(normrnd(0,1/math.sqrt(nhidden3).toFloat,nhidden3*nactions,1))\n",
-    "    \n",
-    "//    normrnd(0,1/math.sqrt(7*7*nwindow).toFloat, model(\"W1\"))                    // \"Xavier\" initialization    \n",
-    "//    normrnd(0,1/math.sqrt(3*3*nhidden).toFloat, model(\"W2\"))                    // which is normal random with variance 1/indegree\n",
-    "//    normrnd(0,1/math.sqrt(10*10*nhidden2).toFloat, model(\"W3\"))\n",
-    "//    normrnd(0,1/math.sqrt(nhidden3).toFloat, model(\"W4\"))   \n",
-    "    \n",
-    "    for ((k,v) <- model) {\n",
-    "        grad.put(k, v.copy);\n",
-    "        gradsq.put(k, v.copy);\n",
-    "        grad(k).clear\n",
-    "        gradsq(k).clear\n",
-    "        v.tensorFormat = tformat\n",
-    "        grad(k).tensorFormat = tformat\n",
-    "        gradsq(k).tensorFormat = tformat\n",
-    "        v.fwdAlgo = talgo\n",
-    "        grad(k).fwdAlgo = talgo\n",
-    "        gradsq(k).fwdAlgo = talgo\n",
-    "    } \n",
+    "    val conv1 = conv(in)(w=7,h=7,nch=nhidden,stride=4,pad=3,initv=1f,convType=convt);\n",
+    "    val relu1 = relu(conv1);\n",
+    "-\n",
+    "    val conv2 = conv(relu1)(w=3,h=3,nch=nhidden2,stride=2,pad=1,convType=convt);\n",
+    "    val relu2 = relu(conv2);\n",
     "\n",
-    "    def _forward(s:GND):(GMat, GND, GND, GMat) = {\n",
+    "    val fc3 =   linear(relu2)(outdim=nhidden3,initv=3e-2f);\n",
+    "    val relu3 = relu(fc3);\n",
+    "    \n",
+    "    val fc4 =   linear(relu3)(outdim=nactions,initv=3e-2f); \n",
+    "    val sel =   fc4(acts);\n",
+    "    \n",
+    "    val out =   glm(sel)(izeros(1,1))\n",
+    "\n",
+    "    val nodes = (in     \\ acts   on\n",
+    "                 conv1  \\ relu1  on\n",
+    "                 conv2  \\ relu2  on\n",
+    "                 fc3    \\ relu3  on\n",
+    "                 fc4    \\ sel    on\n",
+    "                 out    \\ null   ).t\n",
+    "\n",
+    "    opts.nodemat = nodes;\n",
+    "    val net = new Net(opts);\n",
+    "\n",
+    "    \n",
+    "    var initialized = false;\n",
+    "    var zeroacts:IMat = null;\n",
+    "\n",
+    "    def _forward(s:GMat, acts:IMat):GMat = {\n",
     "//        \"\"\" Run the model forward given a state as input.\n",
     "//    returns action predictions and the hidden state\"\"\"     \n",
-    "        val h = model(\"W1\") * s                  // Forward convolution, h is a tensor\n",
-    "        h ~ h *@ (h>=0)                          // ReLU nonlinearity\n",
-    "        val h2 = model(\"W2\") * h                 // Forward convolution, h2 is a tensor\n",
-    "        h2 ~ h2 *@ (h2 >= 0);\n",
-    "        val h3 = model(\"W3\").asMat ^* h2.asMat;  // FC matrix multiply, h3 is a matrix\n",
-    "        h3 ~ h3 *@ (h3 >= 0);                   \n",
-    "        val rew = model(\"W4\").asMat ^* h3;       // Final FC layer, rew is a matrix\n",
-    "        (rew, h, h2, h3)\n",
+    "        net.mats(0) = s;\n",
+    "        if (!initialized) {\n",
+    "            net.init();\n",
+    "            zeroacts = izeros(1,s.ncols);\n",
+    "            initialized = true;\n",
+    "        }\n",
+    "        val myacts = if (acts.asInstanceOf[AnyRef] != null) acts else zeroacts;\n",
+    "        net.layermat(1,0).output = GIMat(myacts);\n",
+    "        net.forward;\n",
+    "        net.layermat(0,5).output.asInstanceOf[GMat];\n",
     "    }\n",
     "    \n",
-    "    def formatInput(s:FMat):GND = {\n",
+    "    def formatInput(s:FMat):GMat = {\n",
     "        if (tformat == CUDNN_TENSOR_NCHW) {\n",
-    "            GMat(s).asND(nwindow,height,width,npar);\n",
+    "            GMat(s).reshapeView(nwindow,height,width,npar);\n",
     "        } else {\n",
-    "            GMat(s).asND(height,width,nwindow,npar).transpose(2,0,1,3);\n",
+    "            GMat(s).reshapeView(height,width,nwindow,npar).transpose(2,0,1,3);\n",
     "        }\n",
     "    }\n",
     "    \n",
-    "    def forward(s:FMat):(GMat, GND, GND, GMat) = {\n",
+    "    def forward(s:FMat):GMat = {\n",
     "        val ss = formatInput(s);\n",
-    "        _forward(ss);\n",
+    "        _forward(ss, null);\n",
     "    }\n",
     "    \n",
     "    \n",
     "    def predict(s:FMat):FMat = {\n",
     "//        \"\"\" Predict the action rewards from a given input state\"\"\"\n",
-    "        val (rew, h, h2, h3) = forward(s);\n",
+    "        val rew = forward(s);\n",
     "        FMat(rew)\n",
     "    }\n",
     "    \n",
@@ -345,33 +390,16 @@
     "              \n",
     "    def gradient(s:FMat, a:IMat, y:FMat):Float = {\n",
     "//        \"\"\" Given a state s, action a and target y, compute the model gradients\"\"\"\n",
-    "        val ss = formatInput(s); \n",
-    "        val (grew, h, h2, h3) = _forward(ss);                             // Run forward\n",
-    "        \n",
-    "        val rew = FMat(grew);                                            // Compute output gradient on CPU\n",
-    "        val dout = y - rew(a + selector);                                // Get the residuals for the actions a \n",
-    "        arew.clear;\n",
-    "        arew(a + selector) = dout;                                      // The gradient for the actions a\n",
-    "        val garew = GMat(arew);                                          // Back to GPU for the rest\n",
-    "        \n",
-    "        grad(\"W4\").asMat ~ grad(\"W4\").asMat + (h3 *^ garew);              // Backward model gradient (FC)\n",
-    "        val dh3 = (model(\"W4\").asMat * garew);                            // Backward data gradient (FC)\n",
-    "        dh3 ~ dh3 *@ (h3 > 0)                                            // Map gradients through the RELU\n",
-    "        \n",
-    "        grad(\"W3\").asMat ~ grad(\"W3\").asMat + (h2.asMat *^ dh3);         // Backward model gradient (FC)\n",
-    "        val dh2 = (model(\"W3\").asMat * dh3).asND(nhidden2,10,10,npar);  // Backward data gradient (FC)\n",
-    "        dh2 ~ dh2 *@ (h2 > 0)        \n",
-    "        \n",
-    "        grad(\"W2\").convolveM(h, dh2, false);                             // Backard model gradient (conv)\n",
-    "        val dh = model(\"W2\") ^* dh2                                      // Backward data gradient (conv)\n",
-    "        dh ~ dh *@ (h > 0)\n",
-    "        \n",
-    "        grad(\"W1\").convolveM(ss, dh, false);                             // Backward model gradient (conv)\n",
+    "        val ss = formatInput(s);\n",
+    "        forward(ss);\n",
+    "        net.layers(net.layers.length-1).target = y;\n",
+    "        backward(0, 0);\n",
+    "                                \n",
     "\n",
     "        sqrt((dout dotr dout)/dout.length).fv                             // return the RMS residual error. \n",
     "    }\n",
     "    \n",
-    "    val lr = GND(1,1,1,1)                                                 // Since this value is changing, it needs to be in a matrix\n",
+    "    val lr = gones(1\\1\\1\\1)                                                 // Since this value is changing, it needs to be in a matrix\n",
     "    \n",
     "    def msprop(learning_rate:Float, decay_rate:Float) = {                // MSprop, i.e. RMSprop without the square root.\n",
     "//        \"\"\" Perform model updates from the gradients using MSprop\"\"\"\n",
@@ -407,9 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -442,9 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -475,9 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -546,9 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -587,7 +607,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -673,7 +692,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -687,7 +706,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -714,7 +733,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -733,7 +752,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -744,7 +763,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -756,7 +775,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -783,7 +802,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -795,7 +814,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -807,7 +826,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -860,9 +879,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "name": "scala",
@@ -870,5 +889,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
