update Conv GPU notebook

--- a/notebooks/DQNpong_ConvGPU.ipynb
+++ b/notebooks/DQNpong_ConvGPU.ipynb
@@ -30,7 +30,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -65,7 +67,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -98,7 +102,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -160,7 +166,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -239,57 +247,44 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": []
+    },
     {
      "ename": "",
      "evalue": "",
      "output_type": "error",
      "traceback": [
-      "<console>:84: error: reassignment to val",
-      "        v.fwdAlgo = talgo",
-      "                  ^",
-      "<console>:85: error: reassignment to val",
-      "        grad(k).fwdAlgo = talgo",
+      "<console>:135: error: not found: value backward",
+      "        backward(0, 0);",
+      "        ^",
+      "<console>:138: error: not found: value dout",
+      "        sqrt((dout dotr dout)/dout.length).fv                             // return the RMS residual error.",
+      "              ^",
+      "<console>:138: error: not found: value dout",
+      "        sqrt((dout dotr dout)/dout.length).fv                             // return the RMS residual error.",
       "                        ^",
-      "<console>:86: error: reassignment to val",
-      "        gradsq(k).fwdAlgo = talgo",
-      "                          ^",
-      "<console>:96: error: value asMat is not a member of BIDMat.GFilter",
-      "        val h3 = model(\"W3\").asMat ^* h2.asMat;  // FC matrix multiply, h3 is a matrix",
-      "                             ^",
-      "<console>:96: error: value asMat is not a member of BIDMat.GMat",
-      "        val h3 = model(\"W3\").asMat ^* h2.asMat;  // FC matrix multiply, h3 is a matrix",
-      "                                         ^",
-      "<console>:98: error: value asMat is not a member of BIDMat.GFilter",
-      "        val rew = model(\"W4\").asMat ^* h3;       // Final FC layer, rew is a matrix",
+      "<console>:138: error: not found: value dout",
+      "        sqrt((dout dotr dout)/dout.length).fv                             // return the RMS residual error.",
       "                              ^",
-      "<console>:106: error: type mismatch;",
-      " found   : BIDMat.FMat",
-      " required: BIDMat.GMat",
-      "            GMat(s).reshapeView(height,width,nwindow,npar).transpose(2,0,1,3);",
-      "                                                                    ^",
-      "<console>:136: error: value asMat is not a member of BIDMat.GFilter",
-      "        grad(\"W4\").asMat ~ grad(\"W4\").asMat + (h3 *^ garew);              // Backward model gradient (FC)",
-      "                   ^",
-      "<console>:136: error: value asMat is not a member of BIDMat.GFilter",
-      "        grad(\"W4\").asMat ~ grad(\"W4\").asMat + (h3 *^ garew);              // Backward model gradient (FC)",
-      "                                      ^",
-      "<console>:137: error: value asMat is not a member of BIDMat.GFilter",
-      "        val dh3 = (model(\"W4\").asMat * garew);                            // Backward data gradient (FC)",
-      "                               ^",
-      "<console>:140: error: value asMat is not a member of BIDMat.GFilter",
-      "        grad(\"W3\").asMat ~ grad(\"W3\").asMat + (h2.asMat *^ dh3);         // Backward model gradient (FC)",
-      "                   ^",
-      "<console>:140: error: value asMat is not a member of BIDMat.GFilter",
-      "        grad(\"W3\").asMat ~ grad(\"W3\").asMat + (h2.asMat *^ dh3);         // Backward model gradient (FC)",
-      "                                      ^",
-      "<console>:140: error: value asMat is not a member of BIDMat.GMat",
-      "        grad(\"W3\").asMat ~ grad(\"W3\").asMat + (h2.asMat *^ dh3);         // Backward model gradient (FC)",
-      "                                                  ^",
-      "<console>:141: error: value asMat is not a member of BIDMat.GFilter",
-      "        val dh2 = (model(\"W3\").asMat * dh3).asND(nhidden2,10,10,npar);  // Backward data gradient (FC)",
-      "                               ^"
+      "<console>:145: error: not found: value model",
+      "        for ((k,v) <- model) {",
+      "                      ^",
+      "<console>:146: error: not found: value grad",
+      "            val g = grad(k);",
+      "                    ^",
+      "<console>:147: error: not found: value gradsq",
+      "            val gsq = gradsq(k);",
+      "                      ^",
+      "<console>:148: error: not found: value model",
+      "            val m = model(k);",
+      "                    ^"
      ]
     },
     {
@@ -319,12 +314,11 @@
     "    \n",
     "    import BIDMach.networks.layers.Node._;\n",
     "\n",
-    "    val in = input;\n",
-    "    val acts = input;\n",
+    "    val in =  input;\n",
     "    \n",
     "    val conv1 = conv(in)(w=7,h=7,nch=nhidden,stride=4,pad=3,initv=1f,convType=convt);\n",
     "    val relu1 = relu(conv1);\n",
-    "-\n",
+    "\n",
     "    val conv2 = conv(relu1)(w=3,h=3,nch=nhidden2,stride=2,pad=1,convType=convt);\n",
     "    val relu2 = relu(conv2);\n",
     "\n",
@@ -332,68 +326,63 @@
     "    val relu3 = relu(fc3);\n",
     "    \n",
     "    val fc4 =   linear(relu3)(outdim=nactions,initv=3e-2f); \n",
+    "    val npredict = 8;\n",
+    "    \n",
+    "    val acts =  input    \n",
     "    val sel =   fc4(acts);\n",
     "    \n",
     "    val out =   glm(sel)(izeros(1,1))\n",
     "\n",
-    "    val nodes = (in     \\ acts   on\n",
+    "    val nodes = (in     \\ null   on\n",
     "                 conv1  \\ relu1  on\n",
     "                 conv2  \\ relu2  on\n",
     "                 fc3    \\ relu3  on\n",
-    "                 fc4    \\ sel    on\n",
-    "                 out    \\ null   ).t\n",
+    "                 fc4    \\ acts    on\n",
+    "                 sel    \\ out  ).t\n",
     "\n",
     "    opts.nodemat = nodes;\n",
     "    val net = new Net(opts);\n",
-    "\n",
-    "    \n",
-    "    var initialized = false;\n",
-    "    var zeroacts:IMat = null;\n",
-    "\n",
-    "    def _forward(s:GMat, acts:IMat):GMat = {\n",
-    "//        \"\"\" Run the model forward given a state as input.\n",
-    "//    returns action predictions and the hidden state\"\"\"     \n",
-    "        net.mats(0) = s;\n",
-    "        if (!initialized) {\n",
-    "            net.init();\n",
-    "            zeroacts = izeros(1,s.ncols);\n",
-    "            initialized = true;\n",
-    "        }\n",
-    "        val myacts = if (acts.asInstanceOf[AnyRef] != null) acts else zeroacts;\n",
-    "        net.layermat(1,0).output = GIMat(myacts);\n",
-    "        net.forward;\n",
-    "        net.layermat(0,5).output.asInstanceOf[GMat];\n",
-    "    }\n",
     "    \n",
     "    def formatInput(s:FMat):GMat = {\n",
     "        if (tformat == CUDNN_TENSOR_NCHW) {\n",
-    "            GMat(s).reshapeView(nwindow,height,width,npar);\n",
+    "            GMat(s).reshapeView(nwindow\\height\\width\\npar);\n",
     "        } else {\n",
-    "            GMat(s).reshapeView(height,width,nwindow,npar).transpose(2,0,1,3);\n",
+    "            GMat(s).reshapeView(height\\width\\nwindow\\npar).transpose(2\\0\\1\\3);\n",
     "        }\n",
     "    }\n",
     "    \n",
-    "    def forward(s:FMat):GMat = {\n",
-    "        val ss = formatInput(s);\n",
-    "        _forward(ss, null);\n",
+    "    var initialized = false;\n",
+    "    \n",
+    "    def checkinit = {\n",
+    "        if (!initialized) {\n",
+    "            net.init();\n",
+    "            initialized = true;\n",
+    "        }\n",
     "    }\n",
-    "    \n",
-    "    \n",
-    "    def predict(s:FMat):FMat = {\n",
-    "//        \"\"\" Predict the action rewards from a given input state\"\"\"\n",
-    "        val rew = forward(s);\n",
-    "        FMat(rew)\n",
+    "\n",
+    "    def predict(s:FMat):GMat = {\n",
+    "//    Run the model forward given a state as input up to the action prediction layer. \n",
+    "//    Action selection/scoring layers are not updated.\n",
+    "//    returns action predictions \n",
+    "        net.mats(0) = GMat(s);\n",
+    "        checkinit;\n",
+    "        net.forward(0, npredict)\n",
+    "        net.layers(npredict-1).output.asInstanceOf[GMat];\n",
     "    }\n",
+    "\n",
     "    \n",
-    "    val selector = irow(0->npar)*nactions;\n",
-    "    val arew = zeros(nactions, npar);\n",
+    "    def forward(s:FMat, acts:IMat):GMat = {\n",
+    "        net.mats(0) = GMat(s);\n",
+    "        checkinit;\n",
+    "        net.layers(npredict).output = GIMat(acts);\n",
+    "        net.forward;        \n",
+    "    }\n",
     "              \n",
     "    def gradient(s:FMat, a:IMat, y:FMat):Float = {\n",
     "//        \"\"\" Given a state s, action a and target y, compute the model gradients\"\"\"\n",
-    "        val ss = formatInput(s);\n",
-    "        forward(ss);\n",
+    "        forward(s, a);\n",
     "        net.layers(net.layers.length-1).target = y;\n",
-    "        backward(0, 0);\n",
+    "        net.backward(0, 0);\n",
     "                                \n",
     "\n",
     "        sqrt((dout dotr dout)/dout.length).fv                             // return the RMS residual error. \n",
@@ -435,7 +424,9 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -468,7 +459,9 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -499,7 +492,9 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -568,7 +563,9 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -607,6 +604,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
